--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,26 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
-
+<header>
+	<h1>Thérèse Floding</h1>
+  	<h2>Front end developer</h2>
+</header>
+<div class="tagline">
+<h3>More abou me</h3>
+	<p>I really enjoy to work pixel by pixel, to create cool CSS solutions and nice functions in JavaScript!</p>
+</div>
+<div class="skills">
+	<h3>My skills:</h3>
+	<ul>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>jQuery</li>
+		<li>JavaScript</li>
+	</ul>
+</div>
+<div class="contact">
+	<h3>Drop me a line!</h3>
+	<p><a href="https://github.com/floding">Click here</a> to contact me!</p>
+</div>
 </body>
 </html>
