--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,17 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-<header>
+<div class="header">
 	<h1>Thérèse Floding</h1>
   	<h2>Front end developer</h2>
-</header>
+</div>
 <div class="tagline">
 <h3>More abou me</h3>
 	<p>I really enjoy to work pixel by pixel, to create cool CSS solutions and nice functions in JavaScript!</p>
 </div>
 <div class="skills">
 	<h3>My skills:</h3>
+	<p>I enjoy writing front-end code with these technologies:</p>
 	<ul>
 		<li>HTML</li>
 		<li>CSS</li>
